# Kam

./: .editorconfig  .env.example  .gitattributes  .gitignore  CHANGELOG.md  Cargo.toml  IMPLEMENTATION_COMPLETE.md  IMPLEMENTATION_SUMMARY.md  README.md  cross.toml  generate_symbols.py  generate_symbols.sh  kam.toml  response.json  symbols.txt
.github/workflows/: cross-build.yml  docs.yml  rust.yml
.kam-venv/: activate.bat  activate.ps1  activate.sh  deactivate
.kam_venv/: README.md  activate.bat  kam.toml
.kam_venv/lib/: x86_64-linux-gnu
docs/: cache-and-venv.md  dependency-resolution.md
examples/: dependency_resolution.rs
local_modules/json/: config.json  modules.json
src/: assets.rs  cache.rs  cmds.rs  customize.sh  dependency_resolver.rs  errors.rs  lib.rs  main.rs  template.rs  types.rs  utils.rs  venv.rs
src/Kam/: customize.sh  post-fs-data.sh  service.sh
src/assets/: tmpl.rs
src/cmds/: add.rs  build.rs  cache.rs  check.rs  dev.rs  init.rs  publish.rs  sync.rs  venv.rs
src/errors/: cache.rs  kam.rs  kam_toml.rs
src/types/: kam_lock.rs  kam_toml.rs  module_prop.rs  modules.rs  source.rs  traits.rs  update_json.rs
test_fix/: kam.toml
test_kam/: CHANGELOG.md  README.md  kam.toml
test_kam_moduel/: kam.toml
test_module_var/: CHANGELOG.md  README.md  kam.toml
test_repo/: README.md  kam.toml
test_repo/json/: README.md  config.json
test_template/: kam.toml
test_template/my-repo/: kam.toml
test_template/my-test-lib/: README.md  kam.toml
test_tmpl/: README.md  kam.toml
tests/: init_test.rs
tmpl_1/: kam.toml
(+95 files in other folders)
