[package]
name = "kam"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4.5.51", features = ["derive"] }
rand = "0.9.2"
regex = "1.12.2"

toml = "0.8"
chrono = { version = "0.4", features = ["serde"] }

tempfile = "3"
colored = "3.0.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
zip = "6.0.0"
