[package]
name = "kam"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4.5.51", features = ["derive"] }
rand = "0.9.2"
regex = "1.12.2"
toml_edit = { version = "0.23.7", features = ["serde"] }
thiserror = "2.0"
chrono = { version = "0.4", features = ["serde"] }

tempfile = "3"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
zip = "6.0.0"
rust-embed = "8.9.0"
toml = "0.9.8"
colored = "3.0.0"
dotenvy = "0.15.7"
anyhow = "1.0.100"
reqwest = { version = "0.12.24", features = ["blocking", "rustls-tls"] }
flate2 = "1.1.5"
tar = "0.4.44"
git2 = "0.20.2"
walkdir = "2.3.3"

[dev-dependencies]
tiny_http = "0.12.0"
